libstdc++-v3/config/locale/generic/ctype_members.cc
@@ -127,19 +127,15 @@ namespace std
   ctype<wchar_t>::
   do_is(mask __m, char_type __c) const
   { 
-    bool __ret = true;
-    bool __match_any = false;
+    bool __ret = false;
     const size_t __bitmasksize = 10; 
     for (size_t __bitcur = 0; __bitcur <= __bitmasksize; ++__bitcur)
       {
-	mask __bit = static_cast<mask>(1 << __bitcur);
+	const mask __bit = static_cast<mask>(1 << __bitcur);
 	if (__m & __bit)
-	  {
-	    __match_any = true;
-	    __ret &= iswctype(__c, _M_convert_to_wmask(__bit));
-	  }
+	  __ret |= iswctype(__c, _M_convert_to_wmask(__bit));
       }
-    return __ret & __match_any;    
+    return __ret;    
   }
   
   const wchar_t* 
@@ -152,7 +148,7 @@ namespace std
 	mask __m = 0;
 	for (size_t __bitcur = 0; __bitcur <= __bitmasksize; ++__bitcur)
 	  { 
-	    mask __bit = static_cast<mask>(1 << __bitcur);
+	    const mask __bit = static_cast<mask>(1 << __bitcur);
 	    if (iswctype(*__lo, _M_convert_to_wmask(__bit)))
 	      __m |= __bit;
 	  }
